refactor: improve code style, modernize math clamps, and update log pattern format